--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "angular-classifieds",
-  "version": "1.0.0",
-  "description": "Classifieds app using angular 1.6",
+  "name": "ng-classifieds",
+  "version": "0.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+  "author": "Nitin",
+  "license": "MIT",
+  "dependencies": {
+    "angular": "^1.5.0",
+    "angular-animate": "^1.5.0",
+    "angular-aria": "^1.5.0",
+    "angular-material": "^0.11.4",
+    "mdi": "^1.4.57"
+  }
 }
